--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,9 +8,12 @@ tasks:
   - name: Start Ollama and the LLM
     init: |
       docker run -d -v ollama:/root/.ollama -p 11434:11434 --name ollama ollama/ollama
-      docker exec -it ollama ollama run tinydolphin
+      #docker exec -it ollama ollama run tinydolphin
+      docker exec ollama ollama run tinydolphin
+      gp sync-done llm-loaded
   - name: Start playing
     init: |
+      gp sync-await llm-loaded
       cd 01-chat
       echo "👋 hello, try this: node about-star-wars.js"
 
